--- a/Python_Comprehensions.ipynb
+++ b/Python_Comprehensions.ipynb
@@ -288,29 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A', ' ', 'd', 'i', 'c', 't', 'i', 'o', 'n', 'a', 'r', 'y', ' ', 'i', 's', ' ', 'a', ' ', 'c', 'o', 'l', 'l', 'e', 'c', 't', 'i', 'o', 'n', ' ', 'w', 'h', 'i', 'c', 'h', ' ', 'i', 's', ' ', 'u', 'n', 'o', 'r', 'd', 'e', 'r', 'e', 'd', ',', ' ', 'c', 'h', 'a', 'n', 'g', 'e', 'a', 'b', 'l', 'e', ' ', 'a', 'n', 'd', ' ', 'i', 'n', 'd', 'e', 'x', 'e', 'd', '.', ' ', 'I', 'n', ' ', 'P', 'y', 't', 'h', 'o', 'n', ' ', 'w', 'r', 'i', 't', 't', 'e', 'n', ' ', 'w', 'i', 't', 'h', ' ', 'c', 'u', 'r', 'l', 'y', ' ', 'b', 'r', 'a', 'c', 'k', 'e', 't', 's', ',', ' ', 'a', 'n', 'd', ' ', 't', 'h', 'e', 'y', ' ', 'h', 'a', 'v', 'e', ' ', 'k', 'e', 'y', 's', ' ', 'a', 'n', 'd', ' ', 'v', 'a', 'l', 'u', 'e', 's', '.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "## Dictionary comprehension example\n",
-    "# Suppose we have to check the count of letters/alphabets repeated in defination of dictionary.\n",
-    "\n",
-    "DictDefination = \"A dictionary is a collection which is unordered, changeable and indexed. In Python written with curly brackets, and they have keys and values.\"\n",
-    "AlphabetList = [Alphabet for Alphabet in DictDefination]\n",
-    "print(AlphabetList)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -322,14 +300,18 @@
     }
    ],
    "source": [
-    "AlphabetDictionary = {key: AlphabetList.count(key) for key in AlphabetList}\n",
-    "print(AlphabetDictionary)\n",
-    "\n"
+    "## Dictionary comprehension example\n",
+    "# Suppose we have to check the count of letters/alphabets repeated in defination of dictionary.\n",
+    "\n",
+    "DictDefination = \"A dictionary is a collection which is unordered, changeable and indexed. In Python written with curly brackets, and they have keys and values.\"\n",
+    "\n",
+    "AlphabetDictionary = {key: DictDefination.count(key) for key in DictDefination}\n",
+    "print(AlphabetDictionary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +320,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -366,6 +348,27 @@
     "plt.bar(key,values)\n",
     "plt.xlabel('Alphabets')\n",
     "plt.ylabel('Count')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'The square of 1 is': 1, 'The square of 2 is': 4, 'The square of 3 is': 9, 'The square of 4 is': 16, 'The square of 5 is': 25, 'The square of 6 is': 36, 'The square of 7 is': 49, 'The square of 8 is': 64, 'The square of 9 is': 81}\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Example:\n",
+    "NumSquareDict = {1:1 , 2:4, 3:9}\n",
+    "## Dictionary comprehension\n",
+    "NumSquareDictComprehension = {f\"The square of {key} is\":key**2 for key in range(1,10)}\n",
+    "print(NumSquareDictComprehension)"
    ]
   },
   {
