--- a/Python_Comprehensions.ipynb
+++ b/Python_Comprehensions.ipynb
@@ -352,23 +352,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'The square of 1 is': 1, 'The square of 2 is': 4, 'The square of 3 is': 9, 'The square of 4 is': 16, 'The square of 5 is': 25, 'The square of 6 is': 36, 'The square of 7 is': 49, 'The square of 8 is': 64, 'The square of 9 is': 81}\n"
+      "{'The square of 1 is': 1, 'The square of 2 is': 8, 'The square of 3 is': 27, 'The square of 4 is': 64, 'The square of 5 is': 125, 'The square of 6 is': 216, 'The square of 7 is': 343, 'The square of 8 is': 512, 'The square of 9 is': 729}\n"
      ]
     }
    ],
    "source": [
-    "### Example:\n",
-    "NumSquareDict = {1:1 , 2:4, 3:9}\n",
+    "### Example cube of number i.e. key:\n",
+    "NumSquareDict = {1:1 , 2:8, 3:27}\n",
     "## Dictionary comprehension\n",
-    "NumSquareDictComprehension = {f\"The square of {key} is\":key**2 for key in range(1,10)}\n",
+    "NumSquareDictComprehension = {f\"The square of {key} is\":key**3 for key in range(1,10)}\n",
     "print(NumSquareDictComprehension)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ------------------- Set Comprehension ---------------\n",
+    "- Set is collection of unique, unordered, mutable collection of elements. In python set elements written enclosed with curly brackets and elements seperated by comma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{64, 1, 4, 36, 9, 16, 49, 81, 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SquareSet = {num**2 for num in range (1,10)}\n",
+    "print(SquareSet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BMW', 'Chevrolet', 'Bentley', 'BMW']\n",
+      "{'Bentley', 'BMW', 'Chevrolet'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Suppose list having duplicate elements\n",
+    "CarBrands = ['BMW','Chevrolet','Bentley','BMW']\n",
+    "print(CarBrands)\n",
+    "# Set comprehension only give only unique elements from list\n",
+    "CarBrandDict = {Brand for Brand in CarBrands}\n",
+    "print(CarBrandDict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=V2FOlOW0bTs&ab_channel=SebastiaanMath%C3%B4t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### --------------- Generator Expression Comprehension -----------\n",
+    "- Generator Function:\n",
+    "    - Function contains a yield statements (rather than a return statement)\n",
+    "    - Can yield, suspend, resume, yield again etc.\n",
+    "    - Because of it can yield multiple values, a generator is also an iterable object.\n",
+    "    \n",
+    "- Generator Expression:\n",
+    "    - Simillar to list comprehension\n",
+    "    - Evaluated on the fly (lazy evaluation)\n",
+    "    - Can be infinite\n",
+    "    \n"
    ]
   },
   {
